# project-euler

./: .codeclimate.yml  .dockerignore  .hindent.yaml  .travis.yml  Dockerfile  README.md  project-euler-solutions.cabal  project-euler.cabal
app/: Main.hs
src/: Problem1.hs  Problem2.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem6.hs  Problem7.hs  Problem8.hs  Problem9.hs
test/: Problem1Spec.hs  Problem2Spec.hs  Problem3Spec.hs  Problem4Spec.hs  Problem5Spec.hs  Problem6Spec.hs  Problem7Spec.hs  Problem8Spec.hs  Spec.hs
