name:                project-euler-solutions
version:             0.1.0.0
homepage:            https://github.com/jeremy-miller/project-euler-solutions/blob/master/README.md
license:             MIT
license-file:        LICENSE
author:              Jeremy Miller
copyright:           2017 Jeremy Miller
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Problem1
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable project-euler-solutions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project-euler-solutions
                     , containers
  default-language:    Haskell2010

test-suite project-euler-solutions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project-euler-solutions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeremy-miller/project-euler-solutions
