name:                project-euler-solutions
version:             0.1.0.0
homepage:            https://github.com/jeremy-miller/project-euler-solutions/blob/master/README.md
license:             MIT
license-file:        LICENSE
author:              Jeremy Miller
copyright:           2017 Jeremy Miller
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Problem1
                     , Problem2
                     , Problem3
                     , Problem4
                     , Problem5
                     , Problem6
                     , Problem7
                     , Problem8
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable solutions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project-euler-solutions
                     , containers
  default-language:    Haskell2010

test-suite solutions-test		
  type:                exitcode-stdio-1.0		
  hs-source-dirs:      test
  other-modules:       Problem1Spec
                     , Problem2Spec
                     , Problem3Spec
                     , Problem4Spec
                     , Problem5Spec
                     , Problem6Spec
                     , Problem7Spec
                     , Problem8Spec
  main-is:             Spec.hs		
  build-depends:       base
                     , hspec
                     , project-euler-solutions		
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N		
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeremy-miller/project-euler-solutions
